--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 /data_preprocessing/img_features128.npy
 
 /model_building/1_HyperParametor_Tuning.ipynb
+/model_building/Untitled.ipynb
 
 /objects
